--- a/Frontend/Components/RedirectToLogin.razor
+++ b/Frontend/Components/RedirectToLogin.razor
@@ -4,6 +4,6 @@
     protected override void OnInitialized()
     {
         // Redireciona para a página de login imediatamente
-        Navigation.NavigateTo("/login", true);
+        Navigation.NavigateTo("/redirect-login", true);
     }
 }
