--- a/Frontend/Components/Routes.razor
+++ b/Frontend/Components/Routes.razor
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 
 <CascadingAuthenticationState>
-    <Router AppAssembly="typeof(Program).Assembly">
+    <Router AppAssembly="typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
                 <NotAuthorized>
@@ -18,5 +18,3 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
-
-
