--- a/Frontend/Components/Pages/Login.razor
+++ b/Frontend/Components/Pages/Login.razor
@@ -1,4 +1,5 @@
-﻿@page "/Login"
+﻿@page "/"
+@page "/Login"
 @using Microsoft.AspNetCore.Components.Web
 @inject HttpClient Http
 @inject NavigationManager Navigation
